z-index fix

--- a/teams-spring2022/BudapestMonkeys/mystyle.css
+++ b/teams-spring2022/BudapestMonkeys/mystyle.css
@@ -177,7 +177,6 @@
     display: inline-block;
     font-size: 16px;
     margin: 4px 2px;
-    z-index: 1;
     transition-duration: 0.4s;
     cursor: pointer;
   }
